--- a/roles/plex/tasks/main.yml
+++ b/roles/plex/tasks/main.yml
@@ -1,2 +1,15 @@
 ---
 # tasks file for plex
+- name: Get Plex Media Server package
+  command: "wget https://downloads.plex.tv/plex-media-server/1.3.3.3148-b38628e/plexmediaserver-1.3.3.3148-b38628e.x86_64.rpm -O /tmp/plex_server.rpm"
+
+- name: Install Plex Media server
+  yum:
+    name: /tmp/plex_server.rpm
+    state: present
+
+- name: Start and enable Plex Media server
+  service:
+    name: "plexmediaserver"
+    state: "started"
+    enabled: yes
