Started to add OS hardening tasks

--- a/roles/basic/tasks/main.yml
+++ b/roles/basic/tasks/main.yml
@@ -11,6 +11,9 @@
     - epel-release
     - libselinux-python
 
+- name: Harden OS
+  include: os_cert_measures.yml
+
 - name: Create user
   user:
     name: bobo
