--- a/install_web_server.yml
+++ b/install_web_server.yml
@@ -2,5 +2,11 @@
 # Installation of web server
 - hosts:
     - web
+
+  pre_tasks:
+    - name: Import variables
+      include_vars:
+        dir: 'vars'
+
   roles:
     - httpd
